[package]
name = "celo-poprf-rs"
version = "0.1.0"
edition = "2021"

description = "A threshold-computable partially-oblivous psuedo-random function"
repository = "https://github.com/celo-org/celo-poprf-rs"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "poprf"

[dependencies]
bincode = "1.2.1"
byteorder = "1.4.3"
ark-bls12-377 = { version = "0.3.0" }
ark-ec = { version = "0.3.0", features = [ "std", "parallel"] }
ark-ff = { version = "0.3.0", features = [ "std", "parallel"] }
ark-serialize = { version = "0.3.0", features = [ "derive" ] }
ark-std = { version = "0.3.0" }
bls-crypto = { git = "https://github.com/celo-org/bls-crypto" }
hex = "0.4.3"
rand_core = { version = "0.6.3", default-features = false }
log = "0.4.14"
rand = "0.8.5"
serde = {version = "1.0.106", features = ["derive"] }

# Required for WASM interface
blake2 = { version = "0.10", default-features = false, optional = true }
getrandom = { version = "0.2", default-features = false, optional = true }
rand_chacha = { version = "0.3.1", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.60", optional = true }

#threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", branch = "straka/arkworks_minus_cli" }
threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", rev = "823bc050e505404811f1f197440deadb31368060" }
thiserror = "1.0.15"


[features]
wasm = ["wasm-bindgen", "getrandom/js", "blake2", "rand_chacha"]
