[package]
name = "poprf"
version = "0.1.6"
edition = "2021"

description = "A threshold-computable partially-oblivous psuedo-random function"
repository = "https://github.com/celo-org/celo-poprf-rs"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "poprf"

[dependencies]
bincode = "1.2.1"
byteorder = "1.4.3"
ark-bls12-377 = { version = "0.3.0" }
ark-ec = { version = "0.3.0", features = [ "std" ] }
ark-ff = { version = "0.3.0", features = [ "std" ] }
ark-crypto-primitives = { version = "0.3.0", features = [ "std" ] }
ark-serialize = { version = "0.3.0", features = [ "derive" ] }
ark-std = { version = "0.3.0" }
bls-crypto = { git = "https://github.com/celo-org/bls-crypto" }
hex = "0.4.3"
rand_core = { version = "0.6.3", default-features = false }
log = "0.4.14"
rand = "0.8.5"
serde = { version = "1.0.106", features = ["derive"] }

# Required for WASM interface
getrandom = { version = "0.2", default-features = false, optional = true }
rand_chacha = { version = "0.3.1", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.60", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# TODO: Once that branch is merged into `master`, change the targeted branch.
threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", rev = "18139d7dadf67b59d75aeefe2ad0c171850c4a12" }
thiserror = "1.0.15"

[dev-dependencies]
rand_chacha = { version = "0.3.1", default-features = false }

[features]
# Build WASM bindings for use in JS environments
wasm = ["wasm-bindgen", "getrandom/js", "rand_chacha"]

# Include a panic hook for printing panic messages to the JS console.
wasm-debug = ["wasm", "console_error_panic_hook"]

# Enable parallel computation in arkworks code. Cannot be used with WASM.
parallel = ["ark-ec/parallel", "ark-ff/parallel", "bls-crypto/parallel", "threshold-bls/parallel"]
